// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <aside
    className="container-root sc-iAyFgw klaKDQ"
    style={undefined}
  >
    
    <div
      className="content"
    >
      <div />
    </div>
    
  </aside>
</span>
`;

exports[`When using snapshots with loader Should render with an element children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <aside
    className="container-root sc-iAyFgw klaKDQ"
    style={undefined}
  >
    
    <div
      className="content loading"
    >
      <div />
    </div>
    <div
      className="centered sc-bxivhb gIwMIC"
    >
      <div>
        <div
          className="sc-htpNat jHFNJI"
        />
        <div
          className="sc-ifAKCX hlQgNG"
        >
          loading
        </div>
      </div>
    </div>
  </aside>
</span>
`;

exports[`When using snapshots with title, header and footer Should render with an element children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <aside
    className="container-root sc-iAyFgw klaKDQ"
    style={undefined}
  >
    <header
      className="header"
    >
      <h2
        className="sidebar-title in-header sc-jzJRlG jKSUDG"
      >
        title
      </h2>
      <div />
    </header>
    <div
      className="content"
    >
      <div />
    </div>
    <div />
  </aside>
</span>
`;
